2007-02-08  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-data-handler.c: (gda_data_handler_get_type): Make GObject a prerequisite, so 
	instances of this interface can be used as object properties in libgnomedb.
	Actually, I wonder how an interface could be implemented without GObject.

2007-02-05  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-config.c:
	* libgda/gda-data-model-import.c:
	* libgda/gda-data-model-query.c:
	* libgda/gda-data-proxy.c:
	* libgda/gda-query.c: Renamed _modif_ to _modify_ in variable and function names, to 
	make the code clearer.
	* libgda/gda-query.h: Renamed gda_query_is_modif_query() to gda_query_is_modify_query(), 
	because modif is not a familiar abbreviation. modification would be nicer but is perhaps 
	a bit too long.

2007-01-31  Vivien Malerba <malerba@gnome-db.org>

	* libgda-3.0.pc.in: removed libxslt as a requirement
	* libgda/gda-data-proxy.c: corrected a bug which prevented any modification to be
	applied to the proxied data model
	* libgda/gda-data-proxy.[hc]: added gda_data_proxy_get_n_modified_rows()
	* libgda/gda-data-model-query.c: added a "use_transaction" property to allow the object
	to start a transaction before running the modification SQL queries and to end it afterwards (so all 
	the modifications are atomic). 
	NOTE1: Beware however to avoid using that feature on several 
	GdaDataModelQuery at the same time if data is being modified at the same time because 
	transactions are shared and this can lead to data losses.
	NOTE2: it's not a problem if a global transaction is started beforehand (not by the 
	GdaDataModelQuery object itself).

2007-01-29  Leonardo Boshell  <lb@kmc.com.co>

	* configure.in: Install DTD files under libgda-3.0/dtd as opposed to
	libgda/dtd to avoid file collisions with libgda-1.2, as per bug #401179.
	* doc/C/installation.xml:
	* doc/C/Makefile.am: Use -3.0 suffix for the installation directory.
	Pass --ignore-files to gtkdoc-mkdb to avoid gtk-doc errors.